--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "tpa-personal-website-react",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ersankarimi/tpa-personal-website-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ersankarimi/tpa-personal-website-react/issues"
+  },
+  "keywords": [
+    "personal-website"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "npm run format && vite",
+    "build": "npm run format && vite build",
+    "preview": "vite preview",
+    "format": "npx prettier --write ."
   },
   "dependencies": {
     "classnames": "^2.3.2",
