--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dev": "npm run format && vite",
     "build": "npm run format && vite build",
     "preview": "vite preview",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "classnames": "^2.3.2",
@@ -27,6 +29,8 @@
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
@@ -39,10 +43,12 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "jsdom": "^20.0.2",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.1",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "vitest": "^0.25.1"
   }
 }
