--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "classnames": "^2.3.2",
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
